# oxidecord

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/auth/: mod.rs
src/rest/: mod.rs
