[package]
name = "oxidecord"
description = "Oxidecord is a fast & secure Discord library."
version = "0.0.1"
license = "MIT"
readme = "README.md"
authors = ["Tristan Farkas <tristan@farkas.st>"]
edition = "2018"

[dependencies]
hyper = "0.12"
reqwest = "0.9.14"
tungstenite = "0.6.1"
url = "1.7.2"
serde_json = "1.0"
lazy_static = "1.3.0"
crossbeam = "0.7.1"
